--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^18.3.1",
     "react-hook": "^0.0.1",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.6.0",
     "react-leaflet": "^5.0.0",
     "react-pdf": "^10.1.0",
     "react-resizable-panels": "^2.1.3",
