--- a/package.json
+++ b/package.json
@@ -47,8 +47,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.2",
     "embla-carousel-react": "^8.3.0",
+    "express": "^5.1.0",
     "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
@@ -58,6 +62,7 @@
     "moment": "^2.30.1",
     "next-themes": "^0.3.0",
     "pdfjs-dist": "^5.4.54",
+    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.4",
     "react-confetti": "^6.4.0",
