--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.23.0",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -61,8 +63,11 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.462.0",
     "moment": "^2.30.1",
+    "multer": "^2.0.2",
     "next-themes": "^0.3.0",
+    "pdf-parse": "^2.2.6",
     "pdfjs-dist": "^5.4.54",
+    "pdfreader": "^3.0.7",
     "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.4",
