--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ai-sdk/perplexity": "^2.0.13",
     "@google/genai": "^1.23.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.0",
+    "@perplexity-ai/perplexity_ai": "^0.11.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -41,6 +43,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@react-pdf/renderer": "^4.3.1",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@supabase/supabase-js": "^2.53.0",
@@ -55,9 +58,13 @@
     "dotenv": "^17.2.2",
     "embla-carousel-react": "^8.3.0",
     "express": "^5.1.0",
+    "fontkit": "^2.0.4",
     "framer-motion": "^12.23.12",
     "fuse.js": "^7.1.0",
+    "groq-sdk": "^0.33.0",
+    "html-to-pdfmake": "^2.5.31",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.3",
     "leaflet": "^1.9.4",
@@ -65,8 +72,10 @@
     "moment": "^2.30.1",
     "multer": "^2.0.2",
     "next-themes": "^0.3.0",
-    "pdf-parse": "^2.2.6",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.4.3",
     "pdfjs-dist": "^5.4.54",
+    "pdfmake": "^0.2.20",
     "pdfreader": "^3.0.7",
     "razorpay": "^2.9.6",
     "react": "^18.3.1",
