--- a/backend/package.json
+++ b/backend/package.json
@@ -7,19 +7,17 @@
   "scripts": {
     "start": "node server.js"
   },
-
   "dependencies": {
     "@perplexity-ai/perplexity_ai": "^0.2.1",
     "@supabase/supabase-js": "^2.39.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-  "groq-sdk": "^0.3.4",
+    "groq-sdk": "groq/groq-sdk",
     "multer": "^1.4.5-lts.1",
     "pdfreader": "^2.2.6"
   },
   "engines": {
     "node": ">=18.0.0"
-    
   }
 }
