--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "groq-sdk": "groq/groq-sdk",
+    "groq-sdk": "0.4.0",
     "multer": "^1.4.5-lts.1",
     "pdfreader": "^2.2.6"
   },
