--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "groq-sdk": "0.4.0",
+    "groq-sdk": "^0.4.0",
     "multer": "^1.4.5-lts.1",
-    "pdfreader": "^2.2.6"
+    "pdfreader": "^2.0.5"
   },
   "engines": {
     "node": ">=18.0.0"
